added computer vs... the judge decision is a bit buggy

--- a/src/main.css
+++ b/src/main.css
@@ -10,7 +10,11 @@ html, body {
   font-size: 1.1em;
 }
 
-#content {
+h1 {
+  
+}
+
+#root {
   max-width: 500px; 
   width: 100%;
   display: flex;
